<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/progresstab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="6dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/notprogress" />

    <ImageView
        android:id="@+id/runtab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/running" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/blocks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/homepage_xml_top_scene">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="195dp"
            android:layout_height="114dp"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            app:srcCompat="@drawable/border"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="520dp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="195dp"
            android:layout_height="114dp"
            android:layout_weight="1"
            android:paddingRight="25dp"
            app:srcCompat="@drawable/border"
            tools:layout_editor_absoluteX="197dp"
            tools:layout_editor_absoluteY="520dp" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="195dp"
            android:layout_height="114dp"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            app:srcCompat="@drawable/border"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="634dp" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="195dp"
            android:layout_height="114dp"
            android:layout_weight="1"
            android:paddingRight="25dp"
            app:srcCompat="@drawable/border"
            tools:layout_editor_absoluteX="197dp"
            tools:layout_editor_absoluteY="634dp" />

        <ImageView
            android:id="@+id/duration_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/duration"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="548dp" />

        <ImageView
            android:id="@+id/calories_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/calories"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="548dp" />

        <ImageView
            android:id="@+id/avg_speed_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/avgspeed"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="662dp" />

        <ImageView
            android:id="@+id/heartrate_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/heartrate"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="662dp" />

        <TextView
            android:id="@+id/duration_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/tv_duration_title"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657" />

        <TextView
            android:id="@+id/duration_min11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tv_duration"
            android:textColor="#424242"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694" />

        <TextView
            android:id="@+id/dur_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="min"
            android:textColor="#424242"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695" />

        <TextView
            android:id="@+id/calories_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tv_calories"
            android:textColor="#424242"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.616"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694" />

        <TextView
            android:id="@+id/calories_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/tv_calories_title"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.638"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658" />

        <TextView
            android:id="@+id/cal_kcal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="kcal"
            android:textColor="#424242"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695" />

        <TextView
            android:id="@+id/avgs_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="km/h"
            android:textColor="#424242"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.695"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.832" />

        <TextView
            android:id="@+id/avg_speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tv_speed"
            android:textColor="#424242"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831" />

        <TextView
            android:id="@+id/avgs_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/tv_speed_title"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.792" />

        <TextView
            android:id="@+id/heart_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="bpm"
            android:textColor="#424242"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.832" />

        <TextView
            android:id="@+id/avg_speed_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tv_heart_rate"
            android:textColor="#424242"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83" />

        <TextView
            android:id="@+id/avgs_header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/tv_heart_rate_title"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.795" />



    </androidx.constraintlayout.motion.widget.MotionLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_greet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:paddingStart="30dp"
                android:paddingTop="40dp"
                android:text="@string/tv_greet"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="3dp"
                android:text="@string/tv_date" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                app:srcCompat="@drawable/map" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>